--- a/content/json/smallprojects.json
+++ b/content/json/smallprojects.json
@@ -3,15 +3,15 @@
     "title": "Creative Chat",
     "links": {
       "demo": "https://creativechat.herokuapp.com",
-      "src": "https://github.com/anuraghazra/creativechat"
+      "src": "https://github.com/chenx820/creativechat"
     },
     "description": "Creative Chat is a realtime fun chatting app. where users can draw with colors in the canvas and communicate through art."
   },
   {
     "title": "Verly.js",
     "links": {
-      "demo": "https://anuraghazra.github.io/Verly.js",
-      "src": "https://github.com/anuraghazra/Verly.js"
+      "demo": "https://chenx820.github.io/Verly.js",
+      "src": "https://github.com/chenx820/Verly.js"
     },
     "description": "Verly.js is a successor to my old Verlet.js Physics Engine. Verly.js is more simple to use and very modular. Easy to integrate verlet physics engine."
   },
@@ -19,23 +19,23 @@
     "title": "Simple Rockets",
     "links": {
       "demo": "https://simplerockets.herokuapp.com",
-      "src": "https://github.com/anuraghazra/simplerockets"
+      "src": "https://github.com/chenx820/simplerockets"
     },
     "description": "Simple Rockets is an online multiplayer game made with NodeJS and Socket.io. All of the players can join the game with their unique name and play."
   },
   {
     "title": "ParticleBrush",
     "links": {
-      "demo": "https://anuraghazra.github.io/ParticleBrush/",
-      "src": "https://github.com/anuraghazra/ParticleBrush"
+      "demo": "https://chenx820.github.io/ParticleBrush/",
+      "src": "https://github.com/chenx820/ParticleBrush"
     },
     "description": "Amazing Drawing App With Particles. Lots Of Colorful Particles."
   },
   {
     "title": "CanvasFun",
     "links": {
-      "demo": "https://anuraghazra.github.io/CanvasFun",
-      "src": "https://github.com/anuraghazra/CanvasFun"
+      "demo": "https://chenx820.github.io/CanvasFun",
+      "src": "https://github.com/chenx820/CanvasFun"
     },
     "description": "Collection of CreativeCoding projects."
   }
