--- a/plugins/gatsby-plugin-social-banners/package.json
+++ b/plugins/gatsby-plugin-social-banners/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gatsby-plugin-social-banners",
   "version": "1.0.0",
-  "description": "automatically generates social banners for note",
+  "description": "automatically generates social banners for notes",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
