--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "author": "Chen Huang <chen.huang678@gmail.com>",
   "homepage": "https://chenx820.github.io/",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@fortawesome/fontawesome-free": "^6.7.2",
-    "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@mapbox/react-native-mapbox-gl": "^6.1.3",
     "babel-plugin-styled-components": "^1.10.7",
     "disqus-react": "^1.0.7",
@@ -29,12 +29,14 @@
     "gatsby-remark-autolink-headers": "^2.1.13",
     "gatsby-remark-embedder": "^1.3.3",
     "gatsby-remark-images": "^3.1.26",
+    "gatsby-remark-katex": "^5.12.0",
     "gatsby-remark-prismjs": "^3.3.20",
     "gatsby-source-filesystem": "^2.1.31",
     "gatsby-transformer-json": "^2.2.13",
     "gatsby-transformer-remark": "^2.6.28",
     "gatsby-transformer-sharp": "^2.2.21",
     "intersection-observer": "^0.7.0",
+    "katex": "^0.16.22",
     "normalize.css": "^8.0.1",
     "prismjs": "^1.17.1",
     "prop-types": "^15.7.2",
