--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby": "^2.32.13",
     "gatsby-image": "^2.2.39",
     "gatsby-plugin-google-analytics": "^2.1.23",
+    "gatsby-plugin-i18n": "^1.0.1",
     "gatsby-plugin-manifest": "^2.2.3",
     "gatsby-plugin-nprogress": "^2.1.2",
     "gatsby-plugin-offline": "^2.2.4",
@@ -29,14 +30,14 @@
     "gatsby-remark-autolink-headers": "^2.1.13",
     "gatsby-remark-embedder": "^1.3.3",
     "gatsby-remark-images": "^3.1.26",
-    "gatsby-remark-katex": "^5.12.0",
+    "gatsby-remark-katex": "^3.0.0",
     "gatsby-remark-prismjs": "^3.3.20",
     "gatsby-source-filesystem": "^2.1.31",
     "gatsby-transformer-json": "^2.2.13",
     "gatsby-transformer-remark": "^2.6.28",
     "gatsby-transformer-sharp": "^2.2.21",
     "intersection-observer": "^0.7.0",
-    "katex": "^0.16.22",
+    "katex": "^0.13.24",
     "normalize.css": "^8.0.1",
     "prismjs": "^1.17.1",
     "prop-types": "^15.7.2",
