--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "chen-huang",
   "private": true,
   "description": "Chen Huang Portfolio Site",
-  "version": "0.1.0",
+  "version": "0.5.0",
   "author": "Chen Huang <chen.huang678@gmail.com>",
   "homepage": "https://chenx820.github.io/",
+  "resolutions": {
+    "graphql": "^16.8.1"
+  },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
@@ -12,66 +15,57 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@mapbox/react-native-mapbox-gl": "^6.1.3",
-    "babel-plugin-styled-components": "^1.10.7",
-    "disqus-react": "^1.0.7",
-    "gatsby": "^2.32.13",
-    "gatsby-image": "^2.2.39",
-    "gatsby-plugin-google-analytics": "^2.1.23",
-    "gatsby-plugin-i18n": "^1.0.1",
-    "gatsby-plugin-manifest": "^2.2.3",
-    "gatsby-plugin-nprogress": "^2.1.2",
-    "gatsby-plugin-offline": "^2.2.4",
-    "gatsby-plugin-react-helmet": "^3.1.2",
-    "gatsby-plugin-sharp": "^2.6.38",
-    "gatsby-plugin-sitemap": "^2.2.19",
-    "gatsby-plugin-styled-components": "^3.1.8",
+    "babel-plugin-styled-components": "^1.13.3",
+    "disqus-react": "^1.1.2",
+    "gatsby": "^5.14.4",
+    "gatsby-plugin-google-analytics": "^5.14.0",
+    "gatsby-plugin-google-gtag": "^5.14.0",
+    "gatsby-plugin-image": "^3.14.0",
+    "gatsby-plugin-manifest": "^5.14.0",
+    "gatsby-plugin-nprogress": "^5.14.0",
+    "gatsby-plugin-offline": "^6.14.0",
+    "gatsby-plugin-react-helmet": "^6.14.0",
+    "gatsby-plugin-sharp": "^5.14.0",
+    "gatsby-plugin-sitemap": "^6.14.0",
+    "gatsby-plugin-styled-components": "^6.14.0",
     "gatsby-plugin-web-font-loader": "^1.0.4",
-    "gatsby-remark-autolink-headers": "^2.1.13",
-    "gatsby-remark-embedder": "^1.3.3",
-    "gatsby-remark-images": "^3.1.26",
-    "gatsby-remark-katex": "^3.0.0",
-    "gatsby-remark-prismjs": "^3.3.20",
-    "gatsby-source-filesystem": "^2.1.31",
-    "gatsby-transformer-json": "^2.2.13",
-    "gatsby-transformer-remark": "^2.6.28",
-    "gatsby-transformer-sharp": "^2.2.21",
-    "intersection-observer": "^0.7.0",
+    "gatsby-plugin-react-i18next": "^3.0.1",
+    "gatsby-remark-autolink-headers": "^6.14.0",
+    "gatsby-remark-embedder": "^7.0.0",
+    "gatsby-remark-images": "^7.14.0",
+    "gatsby-remark-katex": "^7.14.0",
+    "gatsby-remark-prismjs": "^7.14.0",
+    "gatsby-source-filesystem": "^5.14.0",
+    "gatsby-transformer-json": "^5.14.0",
+    "gatsby-transformer-remark": "^6.14.0",
+    "gatsby-transformer-sharp": "^5.14.0",
+    "intersection-observer": "^0.12.0",
+    "i18next": "^22.0.6",
     "katex": "^0.13.24",
     "normalize.css": "^8.0.1",
-    "prismjs": "^1.17.1",
-    "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-grid-system": "^4.4.10",
-    "react-helmet": "^5.2.1",
-    "react-intersection-observer": "^8.24.1",
-    "react-map-interaction": "^1.3.2",
-    "react-scroll": "^1.7.12",
-    "react-scroll-parallax": "^2.1.2",
-    "react-slick": "^0.24.0",
-    "react-spring": "^8.0.27",
-    "sharp": "^0.25.2",
+    "prismjs": "^1.25.0",
+    "prop-types": "^15.8.1",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-grid-system": "^8.2.0",
+    "react-helmet": "^6.1.0",
+    "react-intersection-observer": "^9.16.0",
+    "react-is": "^19.1.0",
+    "react-i18next": "^12.0.0",
+    "react-map-interaction": "^2.1.0",
+    "react-scroll": "^1.9.3",
+    "react-scroll-parallax": "^3.4.5",
+    "react-slick": "^0.30.3",
+    "react-spring": "^10.0.1",
     "slick-carousel": "^1.8.1",
-    "styled-components": "^5.0.0",
-    "typeface-karla": "0.0.72",
-    "typeface-montserrat": "0.0.75"
+    "styled-components": "^5.3.1",
+    "typeface-karla": "^1.1.13",
+    "typeface-montserrat": "^1.1.13"
   },
   "devDependencies": {
-    "@testing-library/cypress": "^5.0.2",
-    "@testing-library/jest-dom": "^4.1.2",
-    "@testing-library/react": "^9.3.0",
-    "axios": "^0.19.0",
-    "babel-jest": "^24.9.0",
-    "babel-preset-gatsby": "^0.2.18",
-    "cypress": "^3.5.0",
-    "gatsby-plugin-alias-imports": "^1.0.5",
-    "gatsby-plugin-root-import": "^2.0.5",
+    "babel-preset-gatsby": "^3.14.0",
     "gh-pages": "^6.3.0",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^24.9.0",
-    "prettier": "^1.18.2",
-    "start-server-and-test": "^1.11.5"
+    "prettier": "^2.5.1"
   },
   "keywords": [
     "gatsby",
@@ -79,8 +73,6 @@
   ],
   "license": "MIT",
   "scripts": {
-    "preinstall": "cd plugins/gatsby-plugin-social-banners && npm install",
-    "now-build": "npm run build",
     "build": "gatsby build",
     "develop": "gatsby develop --host=0.0.0.0",
     "predeploy": "gatsby build",
@@ -88,12 +80,6 @@
     "format": "prettier --write src/**/*.{js,jsx}",
     "start": "npm run develop",
     "serve": "gatsby serve --host=0.0.0.0",
-    "cy:open": "cypress open",
-    "cy:run": "cypress run --config video=false",
-    "test:e2e": "start-server-and-test develop http://localhost:8000 cy:open",
-    "test:e2e:ci": "start-server-and-test develop http://localhost:8000 cy:run",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "prettier": "prettier --write **/*.{ts,js,css,html}"
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   }
 }
