--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "Chen Huang <chen.huang678@gmail.com>",
   "homepage": "https://chenx820.github.io/",
   "resolutions": {
-    "graphql": "^16.8.1"
+    "graphql": "^16.11.0",
+    "**/graphql": "^16.11.0"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
@@ -16,20 +17,17 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "babel-plugin-styled-components": "^1.13.3",
+    "cypress": "^14.5.0",
     "disqus-react": "^1.1.2",
-    "gatsby": "^5.14.4",
-    "gatsby-plugin-google-analytics": "^5.14.0",
-    "gatsby-plugin-google-gtag": "^5.14.0",
+    "gatsby": "^5.14.0",
     "gatsby-plugin-image": "^3.14.0",
     "gatsby-plugin-manifest": "^5.14.0",
     "gatsby-plugin-nprogress": "^5.14.0",
-    "gatsby-plugin-offline": "^6.14.0",
-    "gatsby-plugin-react-helmet": "^6.14.0",
+    "gatsby-plugin-react-i18next": "^3.0.1",
     "gatsby-plugin-sharp": "^5.14.0",
     "gatsby-plugin-sitemap": "^6.14.0",
     "gatsby-plugin-styled-components": "^6.14.0",
     "gatsby-plugin-web-font-loader": "^1.0.4",
-    "gatsby-plugin-react-i18next": "^3.0.1",
     "gatsby-remark-autolink-headers": "^6.14.0",
     "gatsby-remark-embedder": "^7.0.0",
     "gatsby-remark-images": "^7.14.0",
@@ -39,19 +37,17 @@
     "gatsby-transformer-json": "^5.14.0",
     "gatsby-transformer-remark": "^6.14.0",
     "gatsby-transformer-sharp": "^5.14.0",
-    "intersection-observer": "^0.12.0",
     "i18next": "^22.0.6",
-    "katex": "^0.13.24",
+    "intersection-observer": "^0.12.0",
     "normalize.css": "^8.0.1",
     "prismjs": "^1.25.0",
     "prop-types": "^15.8.1",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-grid-system": "^8.2.0",
-    "react-helmet": "^6.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-grid-system": "^8.2.1",
+    "react-i18next": "^12.3.1",
     "react-intersection-observer": "^9.16.0",
     "react-is": "^19.1.0",
-    "react-i18next": "^12.0.0",
     "react-map-interaction": "^2.1.0",
     "react-scroll": "^1.9.3",
     "react-scroll-parallax": "^3.4.5",
@@ -63,6 +59,7 @@
     "typeface-montserrat": "^1.1.13"
   },
   "devDependencies": {
+    "@types/http-proxy": "^1.17.16",
     "babel-preset-gatsby": "^3.14.0",
     "gh-pages": "^6.3.0",
     "prettier": "^2.5.1"
